2009-04-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10847: htmlArea RTE: undo/redo is erratic in IE8

2009-04-09  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8882: drag & drop of section elements and IRRE records does not work if frame has to be scrolled (thanks to Sebastian Fuchs & Helmut Hummel)

2009-04-08  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10266: No user authentication for >1 TYPO3 installation under one domain (Thanks to Marcus Krause)

2009-04-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10737: Add xmlns attribute to html tag in backend

2009-04-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #10834: htmlArea RTE: IE8 now uses standard name for DOM class attribute

2009-04-06  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #9703: Admin panel cannot not be dragged

2009-04-05  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #10025: Searching for ImageMagick in basic configuration does not work

2009-04-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to issue #10834: htmlArea RTE: IE8 now uses standard name for DOM class attribute
	* Added feature #10848: htmlArea RTE: Streamline some functions in class.tx_rtehtmlarea_base.php

2009-04-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed issue #10764: Use new JS-function for loading prototype/scriptaculous/extJS

2009-04-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10837: htmlARea RTE: IE8 reports unknown "complete" attribute on img nodes
	* Fixed bug #10836: htmlARea RTE: RTE leaves unwanted id attribute on inserted table in IE8
	* Added feature #10842: htmlArea RTE: Let IE8 display language marks like other browsers do
	* Fixed bug #10843: htmlArea RTE: IE7 complains when reference is made to attribute xml:lang
	* Fixed bug #10844: htmlArea RTE: IE8 creates erroneous ranges when selection is empty
	* Fixed bug #10845: htmlArea RTE: Incorrect XCLASS in class.tx_rtehtmlarea_editormode.php